# solcoder

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PLAN.md  README.md  bitcoin.html  llm_raw_response.json  pyproject.toml  solana-overview.md  solana.html
blueprints/nft2/: Anchor.toml  Cargo.toml  README.md  blueprint.answers.json
blueprints/nft2/scripts/: mint.ts
blueprints/nft2/tests/: nft.ts
docs/: PRD.md  PROJECT_BRIEF.md  WBS.md
docs/roadmap/done/: TASK-1.1_REPO_TOOLING.md  TASK-1.2_CLI_SHELL.md  TASK-1.3_CONFIG_SESSION.md  TASK-1.4_SESSION_LIFECYCLE.md  (+19 more)
scripts/: install_pipx.sh  setup_kb.py
templates/counter/: Cargo.toml  README.md
templates/escrow/: README.md
templates/nft/: .gitignore  Cargo.toml  README.md
templates/registry/: Anchor.toml  README.md
templates/token/: README.md
tests/: test_cli_entrypoint.py  test_dump_session_command.py  test_version_command.py
tests/cli/: test_branding.py  test_deploy_command.py  test_init_command.py  test_kb_command.py  test_metadata.py  test_new_command.py  test_new_scripts.py  test_session_command.py  test_shell.py  test_status_bar_spent.py  test_tool_commands.py  test_wallet_airdrop.py  test_wallet_spend_cap.py  test_workspace_detection.py
tests/core/: test_bootstrap_airdrop.py  test_command_tool.py  test_config.py  test_env_diag.py  test_exec_ua.py  test_installers.py  test_knowledge_base.py  test_llm_client.py  test_logs.py  test_templates.py  test_todo.py  test_todo_toolkit.py  test_tool_registry.py
tests/session/: test_manager.py
tests/solana/: test_deploy.py  test_rpc.py  test_wallet.py
(+161 files in other folders)
